[tool.poetry]
name = "get-out-of-this-file"
version = "0.1.0"
description = ""
authors = ["reis_is_fat@notanemail.com"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
trello = "^0.9.6"
discord = "^1.0.1"
discord-py-slash-command = "^1.0.9"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
